2009-12-03  Thomas Moulard  <thomas.moulard@gmail.com>

	Do not assume in Kineo rules the library prefix.
	* kineo.mk: Here.

2009-12-02  Thomas Moulard  <thomas.moulard@gmail.com>

	Make Autotest more robust.
	* autotest.at: Handle test binaries in relative	directories.
	* autotest.mk: Handle test suite in a non-standard directory.

2009-11-19  Thomas Moulard  <thomas.moulard@gmail.com>

	Fix documentation dependencies.
	* doxygen.mk: Make ``Doxyfile'' and ``Doxyfile.extra'' depends
	on ``config.status'' (make sure these files are regenerated if
	substituable values are changed such as the version number).

2009-11-16  Thomas Moulard  <thomas.moulard@gmail.com>

	Fix announce-gen download link.
	* announce-gen.mk: Fix download link.

2009-11-16  Thomas Moulard  <thomas.moulard@gmail.com>

	Fix release type detection in SourceForge rules.
	* sf-doc.mk,
	* sf-release.mk: Fix regexp.

2009-11-16  Thomas Moulard  <thomas.moulard@gmail.com>

	Add release related Makefile rules.
	* announce-gen.mk: New.
	* dist-sign.mk: Copy from sf.mk.
	* sf-doc.mk: Copy from sf.mk.
	* sf-release.mk: Rename from sf.mk.

2009-11-11  Thomas Moulard  <thomas.moulard@gmail.com>

	Fix spec file generation rule.
	* rpm.mk: Here.

2009-11-11  Thomas Moulard  <thomas.moulard@gmail.com>

	Update rpm.mk to handle generated spec file.
	* rpm.mk: Update copyright and handle generated
	spec file.

2009-11-11  Thomas Moulard  <thomas.moulard@gmail.com>

	Fix git-version-gen rpmbuild incompatibility.
	* git-version-gen: Replace dashes by points in version
	number so that rpmbuild do not complain anymore that
	generated version number is invalid.

2009-11-03  Thomas Moulard  <thomas.moulard@gmail.com>

	Regenerate the ``.pc'' file if package configuration changes.
	* pkg-config.mk: Make the ``.pc'' file depends on
	``config.status''.

2009-11-02  Thomas Moulard  <thomas.moulard@gmail.com>

	Handle doxygendocdir in jrl-pkg-config.
	* jrl-pkg-config.m4: Search for Doxygen documentation.
